--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:pages": "npm run build && node scripts/copy-dist.mjs"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.2",
