--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "build:pages": "npm run build && node scripts/copy-dist.mjs"
+    "build:pages": "npm run build && node scripts/copy-dist.mjs",
+    "test": "vitest run"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.2",
@@ -31,6 +32,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vitest": "^1.6.0"
   }
 }
