--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "noEmit": true,
-    "types": ["vite/client"]
+    "types": ["vite/client", "vitest/globals"]
   },
   "include": ["src"],
   "references": [
